--- a/sample/AspNetFullFrameworkSampleApp/Views/Web.config
+++ b/sample/AspNetFullFrameworkSampleApp/Views/Web.config
@@ -18,6 +18,8 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="AspNetFullFrameworkSampleApp" />
+        <add namespace="AspNetFullFrameworkSampleApp.Bootstrap" />
+		<add namespace="AspNetFullFrameworkSampleApp.Models" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
