Add test for captured user id and email
This commit adds an integration test to
assert that the user id and email are
captured for an authenticated user.

Use Anglesharp to drive actions, which
is closer to browser driven actions than
performing HTTP calls with HTTP client.
For example, it'll automatically handle
sending values for Anti-XSRF tokens
and cookies.

--- a/test/Elastic.Apm.AspNetFullFramework.Tests/Elastic.Apm.AspNetFullFramework.Tests.csproj
+++ b/test/Elastic.Apm.AspNetFullFramework.Tests/Elastic.Apm.AspNetFullFramework.Tests.csproj
@@ -40,4 +40,7 @@
   <ItemGroup Condition="'$(OS)' == 'WINDOWS_NT'">
     <Compile Remove="Program-Unix.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="0.14.0" />
+  </ItemGroup>
 </Project>
