Add test for webforms page transaction name
This commit adds a webforms page to the
AspNetFullFrameworkSample app and
adds a transaction name test for it.

Group all transaction name tests under
one test class.

--- a/sample/AspNetFullFrameworkSampleApp/AspNetFullFrameworkSampleApp.csproj
+++ b/sample/AspNetFullFrameworkSampleApp/AspNetFullFrameworkSampleApp.csproj
@@ -278,9 +278,16 @@
     <Compile Include="Services\Auth\ApplicationUserClaimsIdentityFactory.cs" />
     <Compile Include="Areas\MyArea\Controllers\HomeController.cs" />
     <Compile Include="Areas\MyArea\MyAreaRegistration.cs" />
+    <Compile Include="Webforms.aspx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+      <DependentUpon>Webforms.aspx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="Areas\MyArea\Views\Home\Index.cshtml" />
     <Content Include="Areas\MyArea\Web.config" />
     <Content Include="Areas\MyArea\_ViewStart.cshtml" />
+    <Content Include="Webforms.aspx" />
   </ItemGroup>
   <PropertyGroup Condition="'$(OS)' == 'WINDOWS_NT'">
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
