--- a/sample/SampleAspNetCoreApp/appsettings.json
+++ b/sample/SampleAspNetCoreApp/appsettings.json
@@ -10,6 +10,7 @@
     "ServerUrls": "http://localhost:8200",
     "TransactionSampleRate": 1.0,
     "CaptureBody": "all",
-    "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*"
+    "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*",
+    "CloudProvider": "false"
   }
 }
