--- a/sample/WebApiSample/appsettings.json
+++ b/sample/WebApiSample/appsettings.json
@@ -9,6 +9,7 @@
   "ElasticApm": {
     "ServerUrls": "http://localhost:8200",
     "CaptureBody": "all",
-    "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*"
+    "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*",
+    "CloudProvider": "false"
   }
 }
