--- a/.ci/docker/sdk-linux/Dockerfile
+++ b/.ci/docker/sdk-linux/Dockerfile
@@ -1,13 +1,14 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1.100
+FROM mcr.microsoft.com/dotnet/sdk:5.0.100-rc.2
 
 ENV DOTNET_ROOT=/usr/share/dotnet
 ENV PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:${DOTNET_ROOT}/tools:${DOTNET_ROOT}
 
 # Download .Net SDK installer script
-RUN curl -s -O -L https://dot.net/v1/dotnet-install.sh
+RUN curl -s -O -L https://dotnet.microsoft.com/download/dotnet-core/scripts/v1/dotnet-install.sh
 
-# Install .Net SDKs
-RUN /bin/bash ./dotnet-install.sh --install-dir "${DOTNET_ROOT}" -version 2.1.505
+# Install .Net SDKs
+RUN /bin/bash ./dotnet-install.sh --install-dir "${DOTNET_ROOT}" -version "3.1.100"
+RUN /bin/bash ./dotnet-install.sh --install-dir "${DOTNET_ROOT}" -version "2.1.505"
 
 # Install docker
 RUN apt update \
