Ignore NETSDK1138 warning
This doesn't appear to have an effect
though...

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,8 +2,7 @@
   <!-- Root Directory Build Properties -->
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
-    <NoWarn>NU1503</NoWarn>
-
+    <NoWarn>NU1503,NETSDK1138</NoWarn>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\build\elasticapm.snk</AssemblyOriginatorKeyFile>
     <AssemblyOriginatorKeyFile Condition="EXISTS('../../../../../../build/elasticapm.snk')">../../../../../../build/elasticapm.snk</AssemblyOriginatorKeyFile>
