Update sample app CloudProvider

--- a/sample/AspNetFullFrameworkSampleApp/Web.config
+++ b/sample/AspNetFullFrameworkSampleApp/Web.config
@@ -17,7 +17,7 @@
 		<add key="ClientValidationEnabled" value="true"/>
 		<add key="UnobtrusiveJavaScriptEnabled" value="true"/>
 		<add key="ElasticApm:MaxQueueEventCount" value="9128"/>
-		<add key="ElasticApm:CloudProvider" value="false"/>
+		<add key="ElasticApm:CloudProvider" value="none"/>
 	</appSettings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.6.1"/>
