--- a/sample/WebApiSample/appsettings.json
+++ b/sample/WebApiSample/appsettings.json
@@ -10,6 +10,6 @@
     "ServerUrls": "http://localhost:8200",
     "CaptureBody": "all",
     "CaptureBodyContentTypes": "application/x-www-form-urlencoded*, text/*, application/json*, application/xml*",
-    "CloudProvider": "false"
+    "CloudProvider": "none"
   }
 }
