--- a/test/Elastic.Apm.Feature.Tests/Elastic.Apm.Feature.Tests.csproj
+++ b/test/Elastic.Apm.Feature.Tests/Elastic.Apm.Feature.Tests.csproj
@@ -12,8 +12,8 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Condition="'$(OS)' == 'WINDOWS_NT'" Include="SpecFlow.Tools.MsBuild.Generation" Version="3.1.86" />
-        <PackageReference Include="SpecFlow.xUnit" Version="3.1.86" />
+        <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.5.5" />
+        <PackageReference Include="SpecFlow.xUnit" Version="3.5.5" />
         <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
     </ItemGroup>
