Git ignore generated ElasticApmAgent.NetCore.sln file

--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,6 @@ _TEMP/
 # Built Elastic documentation files
 html_docs
 build/output/
+
+# Generated .NET core sln file
+ElasticApmAgent.NetCore.sln
