--- a/sample/Directory.Build.props
+++ b/sample/Directory.Build.props
@@ -1,6 +1,6 @@
 <Project>
   <Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)../'))" />
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>..\..\build\sampleapps.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>$(SolutionRoot)/build/sampleapps.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 </Project>
