Add license and package icon files to packages

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -8,8 +8,18 @@
     <VersionPrefix>1.7.0</VersionPrefix>
     <Authors>Elastic and contributors</Authors>
     <Copyright>2020 Elasticsearch BV</Copyright>
-    <PackageLicenseUrl>https://github.com/elastic/apm-agent-dotnet/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/elastic/apm-agent-dotnet</PackageProjectUrl>
-    <PackageIconUrl>https://raw.githubusercontent.com/elastic/apm-agent-dotnet/master/build/nuget-icon.png</PackageIconUrl>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageIcon>nuget-icon.png</PackageIcon>
   </PropertyGroup>
+  <ItemGroup>
+    <None Include="$(SolutionRoot)/build/nuget-icon.png">
+      <Pack>True</Pack>
+      <PackagePath>.</PackagePath>
+    </None>
+    <None Include="$(SolutionRoot)/LICENSE">
+      <Pack>True</Pack>
+      <PackagePath>.</PackagePath>
+    </None>
+  </ItemGroup>
 </Project>
