--- a/src/Elastic.Apm.StackExchange.Redis/Elastic.Apm.StackExchange.Redis.csproj
+++ b/src/Elastic.Apm.StackExchange.Redis/Elastic.Apm.StackExchange.Redis.csproj
@@ -5,7 +5,7 @@
       <AssemblyName>Elastic.Apm.StackExchange.Redis</AssemblyName>
       <PackageId>Elastic.Apm.StackExchange.Redis</PackageId>
       <Description>Elastic APM for StackExchange.Redis. This package contains instrumentation for StackExchange.Redis Redis client. See: https://github.com/elastic/apm-agent-dotnet/tree/master/docs</Description>
-      <PackageTags>apm, monitoring, elastic, elasticapm, analytics, redis, stackExchange.redis</PackageTags>
+      <PackageTags>apm, monitoring, elastic, elasticapm, analytics, redis, StackExchange.Redis</PackageTags>
       <TargetFramework>netstandard2.0</TargetFramework>
     </PropertyGroup>
 
