Build automation for performing common tasks (#1062)
This commit introduces a small F# project to automate common build tasks:

- building all projects
- building agent zip file for use with startup hooks
- generating release notes

Tasks can be extended in future.

Other related changes:

- Generate specflow files cross plaform
- Add SolutionRoot MSBuild property
- Add license and package icon files to generated nuget packages
- Update nuget icon to newer brand colours

Closes #1051

--- a/.gitignore
+++ b/.gitignore
@@ -337,3 +337,7 @@ _TEMP/
 
 # Built Elastic documentation files
 html_docs
+build/output/
+
+# Generated .NET core sln file
+ElasticApmAgent.NetCore.sln
