--- a/sample/AspNetFullFrameworkSampleApp/AspNetFullFrameworkSampleApp.csproj
+++ b/sample/AspNetFullFrameworkSampleApp/AspNetFullFrameworkSampleApp.csproj
@@ -125,6 +125,10 @@
       <SubType>ASPXCodeBehind</SubType>
       <DependentUpon>Webforms.aspx</DependentUpon>
     </Compile>
+    <Compile Include="WebformsException.aspx.cs">
+      <SubType>ASPXCodeBehind</SubType>
+      <DependentUpon>WebformsException.aspx</DependentUpon>
+    </Compile>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\WebApiController.cs" />
     <Compile Include="Controllers\DatabaseController.cs" />
@@ -216,6 +220,7 @@
     <Content Include="Areas\MyArea\Web.config" />
     <Content Include="Areas\MyArea\_ViewStart.cshtml" />
     <Content Include="Webforms.aspx" />
+    <Content Include="WebformsException.aspx" />
     <Content Include="Scripts\umd\popper.min.js.map" />
     <Content Include="Scripts\umd\popper.js.map" />
     <Content Include="Scripts\umd\popper-utils.min.js.map" />
@@ -292,8 +297,6 @@
     <PackageReference Include="System.Data.SQLite">
       <Version>1.0.112</Version>
     </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
       <Version>5.0.0</Version>
     </PackageReference>
