--- a/sample/StackExchangeRedisSample/StackExchangeRedisSample.csproj
+++ b/sample/StackExchangeRedisSample/StackExchangeRedisSample.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <PackageReference Include="StackExchange.Redis" Version="2.0.495" />
+      <PackageReference Include="DotNet.Testcontainers" Version="1.4.0" />
     </ItemGroup>
   
     <ItemGroup>
