--- a/test/Elastic.Apm.StackExchange.Redis.Tests/Elastic.Apm.StackExchange.Redis.Tests.csproj
+++ b/test/Elastic.Apm.StackExchange.Redis.Tests/Elastic.Apm.StackExchange.Redis.Tests.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <PackageReference Include="StackExchange.Redis" Version="2.0.495" />
     <PackageReference Include="Proc" Version="0.6.2" />
+    <PackageReference Include="DotNet.Testcontainers" Version="1.4.0" />
 
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
