only package projects explicitly marked <IsPackable>true</IsPackable>
This commit only packages projects
explicitly marked as <IsPackable>true</IsPackable>.
Each project in ./src is explicltly marked, and projects
in ./test and ./sample inherit <IsPackable>false</IsPackable>
from Directory.Build.props.

This allows build[.bat/.sh] pack to package just
the releasable artifacts.

--- a/sample/Directory.Build.props
+++ b/sample/Directory.Build.props
@@ -2,5 +2,9 @@
   <Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)../'))" />
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>$(SolutionRoot)/build/sampleapps.snk</AssemblyOriginatorKeyFile>
+    <IsPackable>false</IsPackable>
+    <!-- Suppress warnings when a proj is marked <IsPackable>false</IsPackable> 
+         but dotnet pack expects to pack it e.g. Microsoft.NET.Sdk.Web test and sample projects. -->
+    <WarnOnPackingNonPackableProject>false</WarnOnPackingNonPackableProject>
   </PropertyGroup>
 </Project>
