--- a/src/ElasticApmStartupHook/ElasticApmStartupHook.csproj
+++ b/src/ElasticApmStartupHook/ElasticApmStartupHook.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AssemblyName>ElasticApmAgentStartupHook</AssemblyName>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Elastic.Apm.AspNetCore\Elastic.Apm.AspNetCore.csproj" />
