--- a/src/Elastic.Apm.StackExchange.Redis/Elastic.Apm.StackExchange.Redis.csproj
+++ b/src/Elastic.Apm.StackExchange.Redis/Elastic.Apm.StackExchange.Redis.csproj
@@ -7,6 +7,7 @@
       <Description>Elastic APM for StackExchange.Redis. This package contains instrumentation for StackExchange.Redis Redis client. See: https://github.com/elastic/apm-agent-dotnet/tree/master/docs</Description>
       <PackageTags>apm, monitoring, elastic, elasticapm, analytics, redis, StackExchange.Redis</PackageTags>
       <TargetFramework>netstandard2.0</TargetFramework>
+      <IsPackable>true</IsPackable>
     </PropertyGroup>
 
   <ItemGroup>
