suppress NETSDK1138 warnings for EOL frameworks

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,7 +2,9 @@
   <!-- Root Directory Build Properties -->
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
-    <NoWarn>NU1503,NETSDK1138</NoWarn>
+    <NoWarn>NU1503</NoWarn>
+    <!-- suppress NETSDK1138 warnings for EOL frameworks -->
+    <CheckEolTargetFramework>false</CheckEolTargetFramework>
     <SolutionRoot>$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), build.bat))</SolutionRoot>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\build\elasticapm.snk</AssemblyOriginatorKeyFile>
