Add .NET 5 to Elastic.Apm.Tests (#1040)
This commit adds .NET 5 to the TargetFrameworks
for Elastic.Apm.Tests and Elastic.Apm.SqlClient.Tests,
and updates global.json and docker images to use 5.0.100 SDK.

* Install .NET Core 2.1 and 3.1 into the docker images
using the dotnet-install.sh bash script.
* Suppress NETSDK1138 warning for EOL frameworks
* Update SpecFlow dependencies
* Bump msbuild dependencies
* Fail if something bad happened when installing the tools
* Use $LASTEXITCODE in CI PowerShell scripts

    This commit uses $LASTEXITCODE instead of $?.
    The latter returns $true or $false for success
    whereas the exit code is needed for comparison.

* Update nuget.commandline that supports .NET 5.0

    nuget CLI version >= 5.8.0 is needed to correctly restore
    packages and write project.assets.json.

* Fix error for RazorTagHelper - set DOTNET_HOST_PATH
* Update MetricsTests.cs

    ProviderWithException: change assert to not depend on the order of lines.

Co-authored-by: Victor Martinez <VictorMartinezRubio@gmail.com>
Co-authored-by: Greg Kalapos <gergo@kalapos.net>

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
     <NoWarn>NU1503</NoWarn>
+    <!-- suppress NETSDK1138 warnings for EOL frameworks -->
+    <CheckEolTargetFramework>false</CheckEolTargetFramework>
     <SolutionRoot>$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), build.bat))</SolutionRoot>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\build\elasticapm.snk</AssemblyOriginatorKeyFile>
