Add Microsoft.NET.Sdk.Razor package reference for ASP.NET Core 2.2
This commit adds a reference to Microsoft.NET.Sdk.Razor
package reference for ASP.NET Core 2.2. This is to fix a
known bug in the .NET 5.0 SDK where the build target
RazorTagHelper fails when DOTNET_HOST_PATH is not set.

--- a/sample/SampleAspNetCoreApp/SampleAspNetCoreApp.csproj
+++ b/sample/SampleAspNetCoreApp/SampleAspNetCoreApp.csproj
@@ -12,6 +12,7 @@
   <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp2.2' ">
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.2.6" />
+    <PackageReference Include="Microsoft.NET.Sdk.Razor" Version="2.2.0" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp3.0' ">
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.0.0" />
