--- a/sample/StackExchangeRedisSample/StackExchangeRedisSample.csproj
+++ b/sample/StackExchangeRedisSample/StackExchangeRedisSample.csproj
@@ -7,6 +7,8 @@
 
     <ItemGroup>
       <PackageReference Include="StackExchange.Redis" Version="2.0.495" />
+      <!-- Strong name any assemblies that aren't i.e. DotNet.Testcontainers -->
+      <PackageReference Include="StrongNamer" Version="0.2.5" />
       <PackageReference Include="DotNet.Testcontainers" Version="1.4.0" />
     </ItemGroup>
   
