--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -14,6 +14,10 @@
     <PackageIcon>nuget-icon.png</PackageIcon>
     <!-- Include .pdb in package -->
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
+    <!-- Generate documentation files for each package -->
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <!-- don't warn on missing XML documentation -->
+    <NoWarn>$(NoWarn);1591</NoWarn>
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
