--- a/test/Elastic.Apm.Perf.Tests/Elastic.Apm.Perf.Tests.csproj
+++ b/test/Elastic.Apm.Perf.Tests/Elastic.Apm.Perf.Tests.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <LangVersion>7.3</LangVersion>
+    <IsTestProject>false</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
