--- a/test/Directory.Build.props
+++ b/test/Directory.Build.props
@@ -25,7 +25,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <!-- Add coverlet collector for all platforms -->
-    <PackageReference Include="coverlet.collector" Version="1.3.0" Condition="'$(IsTestProject)' == 'true' AND '$(OS)' == 'WINDOWS_NT'">
+    <PackageReference Include="coverlet.collector" Version="1.3.0" Condition="'$(IsTestProject)' == 'true'">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
