Allow ElasticApmStartupHook to work with System.Diagnostics.DiagnosticSource 4 and 5
This commit updates the startup hook implementation to allow
it to work with applications that are compiled against either
System.Diagnostics.DiagnosticSource 4 or 5.

Introduce a `UseDiagnosticSourceFour` MSBuild property to
Elastic.Apm to conditionally reference
System.Diagnostics.DiagnosticSource 4.x.x or 5.x.x. The
build agent-zip task uses the property to compile
Elastic.Apm against both
System.Diagnostics.DiagnosticSource 4.x.x and 5.x.x, and package
both into the startup hook zip file.

Split the startup hook agent assembly and dependency loading
into its own assembly, Elastic.Apm.StartupHook.Loader, compiled against Elastic.Apm, allowing
different versions to be compiled for different referenced
System.Diagnostics.DiagnosticSource versions.
ElasticApmStartupHook now determines if a version of
System.Diagnostics.DiagnosticSource is already loaded, using
this to determine which version of Elastic.Apm.StartupHook.Loader
to load and invoke.

--- a/src/Elastic.Apm/Elastic.Apm.csproj
+++ b/src/Elastic.Apm/Elastic.Apm.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     <IsPackable>true</IsPackable>
+    <UseDiagnosticSourceVersionFour>false</UseDiagnosticSourceVersionFour>
   </PropertyGroup>
   <PropertyGroup>
     <RootNamespace>Elastic.Apm</RootNamespace>
@@ -14,8 +15,13 @@
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="4.5.0" />
   </ItemGroup>
-  <ItemGroup>
+  <ItemGroup Condition="'$(UseDiagnosticSourceVersionFour)' == 'false'">
     <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="5.0.0" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(UseDiagnosticSourceVersionFour)' == 'true'">
+    <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="4.6.0" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.Diagnostics.Tracing.TraceEvent" Version="2.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.9.0" />
