Add link to official documentation

--- a/src/Elastic.Apm.AspNetFullFramework/Elastic.Apm.AspNetFullFramework.csproj
+++ b/src/Elastic.Apm.AspNetFullFramework/Elastic.Apm.AspNetFullFramework.csproj
@@ -4,7 +4,7 @@
     <AssemblyName>Elastic.Apm.AspNetFullFramework</AssemblyName>
     <RootNamespace>Elastic.Apm.AspNetFullFramework</RootNamespace>
     <PackageId>Elastic.Apm.AspNetFullFramework</PackageId>
-    <Description>Elastic APM for ASP.NET Full Framework. This package contains auto instrumentation for ASP.NET Full Framework. See: https://github.com/elastic/apm-agent-dotnet/tree/master/docs</Description>
+    <Description>Elastic APM for ASP.NET Full Framework. This package contains auto instrumentation for ASP.NET Full Framework. See: https://www.elastic.co/guide/en/apm/agent/dotnet/current/setup-asp-dot-net.html for setup</Description>
     <PackageTags>apm, monitoring, elastic, elasticapm, analytics, aspnet</PackageTags>
     <IsPackable>true</IsPackable>
   </PropertyGroup>
